Fix that supposedly enables dot graphviz visualizations to run on mac, assuming it was installed. please test on other machines
git-svn-id: http://www.molgenis.org/svn/molgenis/trunk@5774 42de9c89-b41c-0410-9fa9-f33e7b6bda7a